@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<linker>
+	<assembly fullname="smcs">
+		<type fullname="Mono.CompilerServices.SymbolWriter.MonoDebuggerSupport" />
+	</assembly>
+</linker>
